--- a/src/app/pages/Home/style.scss
+++ b/src/app/pages/Home/style.scss
@@ -1,6 +1,7 @@
 .home{
-  background-color: gray;
+  background-color: rgba(128, 128, 128, 0.584);
   padding: 10px;
+  height: 3000px;
 }
 .container{
   margin: 0;
