--- a/src/app/pages/Login/log.scss
+++ b/src/app/pages/Login/log.scss
@@ -9,6 +9,13 @@
   top: 0;
 }
 
+.logo{
+  width: 50px;
+  height: 50px;
+  margin: 10px;
+  cursor: pointer;
+}
+
 .title{
   margin: 0 auto;
   width: 240px;
