--- a/src/app/pages/Listen/listen.scss
+++ b/src/app/pages/Listen/listen.scss
@@ -1,7 +1,7 @@
 .listenWrapper{
-  margin: 20px;
+  padding: 20px;
   width: 100%;
-  background-color: white;
+  overflow: visible;
 }
 
 .title{
@@ -9,5 +9,8 @@
   margin: 30px auto;
 }
 .btn{
-  margin: 10px 0;
+  margin: 40px 20px;
+  font-size: 16px;
+  height: 40px;
+  width: 100px;
 }
