--- a/src/app/common/backtop.scss
+++ b/src/app/common/backtop.scss
@@ -4,15 +4,20 @@
   bottom: 30px;
   width: 58px;
   height: 58px;
-  background-color: #36363669;
+  background-color: rgba(0,132,255,.1);
   opacity: 0.7;
   border-radius: 4px;
   cursor: pointer;
+  z-index: 0;
 }
 .img{
   margin: 9px;
   width: 40px;
   height: 40px;
+  fill: #1890ff;
+}
+.backtop:hover{
+  background-color: rgba(0, 132, 255, 0.2);
 }
 
 .hide{
